--- a/app/src/main/res/layout/activity_mechanism.xml
+++ b/app/src/main/res/layout/activity_mechanism.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="#00BCD4"
-        android:text="Why do we have fever?"
+        android:text="@string/why_do_we_have_fever"
         android:textColor="#FFFFFF"
         android:onClick="goToLink1"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -23,7 +23,7 @@
         android:id="@+id/MechanismTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Useful links about fever"
+        android:text="@string/useful_links_about_fever"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.179"
